--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Git VSCODE</title>
 </head>
 <body>
-    
+   
+    <!--DIV CONTENEDOR 1-->
+    <div class="container">
+        </div class="row">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, harum. </p>
+        </div>
+    <div>
+        
 </body>
 </html>
